# room-reservation

./: .gitignore
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
backend/.cursor/rules/: general.md  general.mdc  product.md  product.mdc  python.mdc
backend/app/reservation/application/use_cases/: ApproveReservation.py  CancelReservation.py  CreateBuilding.py  CreateReservation.py  CreateSpace.py  DeleteBuilding.py  DeleteSpace.py  ListAdminReservations.py  ListBuildings.py  ListMyReservations.py  ListReservations.py  ListSpaces.py  RejectReservation.py  RescheduleReservation.py  UpdateBuilding.py  UpdateSpace.py
backend/app/reservation/domain/: exceptions.py
backend/app/reservation/domain/entities/: Building.py  Reservation.py  Space.py  __init__.py
backend/app/reservation/domain/exceptions/: BuildingInUseError.py  BuildingNotFoundError.py  DuplicateBuildingNameError.py  DuplicateSpaceNameError.py  InvalidReservationPeriodError.py  InvalidReservationTransitionError.py  ReservationAccessDeniedError.py  ReservationConflictError.py  ReservationDomainError.py  ReservationNotFoundError.py  SpaceInUseError.py  SpaceNotFoundError.py  __init__.py
backend/app/reservation/domain/value_objects/: LocalizedNames.py  ReservationStatus.py  __init__.py
backend/app/user/domain/: exceptions.py
backend/core/db/: db_config.py  session.py
backend/core/db/alembic/: env.py
backend/core/security/: jwt.py  password.py  roles.py
backend/di/: auth.py  domain.py  repository.py  usecase.py
deploy/: README.md  up.sh  (+5 more)
(+118 files in other folders)
