[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.2",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-ulid>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
extend-exclude = ["core/db/alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["core/db/alembic/"]

[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

# Route handlers follow the FastAPI convention: no return annotation, use response_model.
[[tool.mypy.overrides]]
module = ["app.*.infrastructure.inbound.api.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
